[metadata]
name = snowkill
version = attr: snowkill.version.__version__

author = Vitaly Markov
author_email = wild.desu@gmail.com
url = https://github.com/littleK0i/snowkill

description = A tool for realtime monitoring of running, queued and blocked queries in Snowflake
long_description = file: README.md
long_description_content_type = text/markdown

keywords = snowflake,sql,query,monitor,monitoring,running,kill,terminate,database

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Database
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:

python_requires = >=3.8
install_requires =
    snowflake-connector-python

[options.extras_require]
examples =
    markdown
    psycopg[binary]
    requests

postgres =
    psycopg[binary]

dev =
    black
    pytest
    ruff
